--- a/project/package.json
+++ b/project/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.5.20"
   },
   "dependencies": {
+    "@vueuse/core": "^14.1.0",
     "maplibre-gl": "^5.16.0",
     "naive-ui": "^2.42.0",
     "vue-router": "^4.5.1",
